force-app/main/default/objects/Entregable__c/fields/Avance_Total_Mes__c.field-meta.xml
<CustomField>
    <fullName>Avance_Total_Mes__c</fullName>
    <description>Guarda el campo Avance Total Mes cuando se actualizan los datos económicos del Proyecto de forma mensual.</description>
    <label>Avance Total Mes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>