force-app/main/default/objects/Entregable__c/fields/Cerrado__c.field-meta.xml
<CustomField>
    <fullName>Cerrado__c</fullName>
    <formula>Estado__c = &apos;Firmado&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Se marca automáticamente cuando el entregable está en estado Aprobado.</inlineHelpText>
    <label>Cerrado</label>
    <type>Checkbox</type>
</CustomField>