force-app/main/default/objects/Entregable__c/fields/Estado2__c.field-meta.xml
<CustomField>
    <fullName>Estado2__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estado_Entregables</valueSetName>
    </valueSet>
</CustomField>