force-app/main/default/objects/Entregable__c/fields/Fase__c.field-meta.xml
<CustomField>
    <fullName>Fase__c</fullName>
    <label>Fase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preparación</fullName>
                <label>1 - Preparación Inicial</label>
            </value>
            <value>
                <fullName>Diseño</fullName>
                <label>2 - Diseño</label>
            </value>
            <value>
                <fullName>Construcción</fullName>
                <label>3 - Construcción</label>
            </value>
            <value>
                <fullName>Pruebas</fullName>
                <label>4 - Pruebas</label>
            </value>
            <value>
                <fullName>Preparación Final</fullName>
                <label>5 - Preparación Final</label>
            </value>
            <value>
                <fullName>Go Live y Soporte</fullName>
                <label>6 - Go Live y Soporte</label>
            </value>
            <value>
                <fullName>Garantía</fullName>
                <label>7 - Garantía</label>
            </value>
            <value>
                <fullName>8 - Todas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>