force-app/main/default/objects/Entregable__c/fields/FechaRealFirma__c.field-meta.xml
<CustomField>
    <fullName>FechaRealFirma__c</fullName>
    <label>Fecha Real de Firma</label>
    <type>DateTime</type>
</CustomField>