force-app/main/default/objects/Entregable__c/fields/FechaRealLiberacion__c.field-meta.xml
<CustomField>
    <fullName>FechaRealLiberacion__c</fullName>
    <label>Fecha Real de Liberación</label>
    <type>DateTime</type>
</CustomField>