force-app/main/default/objects/Entregable__c/fields/Hito__c.field-meta.xml
<CustomField>
    <fullName>Hito__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Hito</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Proyecto__c</field>
            <operation>equals</operation>
            <valueField>Hito__c.Proyecto__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hito__c</referenceTo>
    <relationshipLabel>Grupos de Entregables</relationshipLabel>
    <relationshipName>Grupos_de_Entregables</relationshipName>
    <type>Lookup</type>
</CustomField>