force-app/main/default/objects/Entregable__c/fields/Peso_Entregable__c.field-meta.xml
<CustomField>
    <fullName>Peso_Entregable__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Peso Grupo de Entregables</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>