force-app/main/default/objects/Entregable__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <label>Sprint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ARAUCO-Fase I</fullName>
            </value>
            <value>
                <fullName>ARAUCO-Fase II</fullName>
            </value>
            <value>
                <fullName>ARAUCO-Fase III</fullName>
            </value>
            <value>
                <fullName>MINFIN - Fase 0.- Datos Maestros</fullName>
            </value>
            <value>
                <fullName>MINFIN - Fase 1A.- Varios Módulos</fullName>
            </value>
            <value>
                <fullName>MINFIN - Fase 1B.- RYD</fullName>
            </value>
            <value>
                <fullName>MINFIN - Fase 2.- Programación y Formulación</fullName>
            </value>
            <value>
                <fullName>MINFIN - Fase 3.- Solución Completa e Integrada</fullName>
            </value>
            <value>
                <fullName>MINFIN - Garantía, Soporte y Mantenimiento</fullName>
            </value>
            <value>
                <fullName>MINFIN - Gestión del Cambio</fullName>
            </value>
            <value>
                <fullName>MINFIN - Informe Final</fullName>
            </value>
            <value>
                <fullName>MINFIN - Ingeniería de Detalle</fullName>
            </value>
            <value>
                <fullName>MINFIN - Licenciamiento</fullName>
            </value>
            <value>
                <fullName>MINFIN - Provisión de Ambientes</fullName>
            </value>
            <value>
                <fullName>MINFIN - Puesta en Producción e Implantación</fullName>
            </value>
            <value>
                <fullName>MINFIN - Transferencia del Conocimiento</fullName>
            </value>
            <value>
                <fullName>VANTI. ERP. W11.- ECS + Nómina</fullName>
            </value>
            <value>
                <fullName>VANTI. ERP. W12.- P&amp;G + LMS</fullName>
            </value>
            <value>
                <fullName>VANTI. ERP. W13.- REC + S&amp;D</fullName>
            </value>
            <value>
                <fullName>VANTI. ERP. W2.- LO+FI</fullName>
            </value>
            <value>
                <fullName>VANTI. ERP. W3. BPC</fullName>
            </value>
            <value>
                <fullName>VANTI. ERP. W4. QM</fullName>
            </value>
            <value>
                <fullName>VANTI. ERP. WXX.- Todos</fullName>
            </value>
            <value>
                <fullName>VANTI. ISU. W1. SSCC</fullName>
            </value>
            <value>
                <fullName>VANTI. ISU. WXX. Todas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>